<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_date_height">

        <Button
            android:layout_width="@dimen/calendar_button_width"
            android:layout_height="match_parent"
            android:text="@string/prev"
            android:id="@+id/prevButton" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/dayTitle"
            android:layout_weight="5"
            android:gravity="center"/>

        <Button
            android:layout_width="@dimen/calendar_button_width"
            android:layout_height="match_parent"
            android:text="@string/next"
            android:id="@+id/nextButton" />

    </LinearLayout>

    <ch.epfl.sweng.evento.InfinitePagerAdapter.InfiniteViewPager
        android:layout_width="match_parent"
        android:layout_height="@dimen/calendar_grid_view_height"
        android:id="@+id/calendar_infinite_pager" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/calendar_list_event"/>

</LinearLayout>