<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".gui.MainActivity"
    android:background="@android:color/black">
    <item
        android:id="@+id/action_createAnEvent"
        android:icon="@drawable/plus"
        android:orderInCategory="2"
        android:title="@string/menu_create_event"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_manageYourEvent"
        android:orderInCategory="100"
        android:title="@string/menu_manage_event"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/refresh"
        android:orderInCategory="1"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="300"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <!--<item-->
        <!--android:id="@+id/action_user"-->
        <!--android:icon="@drawable/ic_action_user"-->
        <!--android:orderInCategory="300"-->
        <!--android:title="@string/menu_user"-->
        <!--app:showAsAction="ifRoom" />-->



</menu>