<resources>
    <string name="addPictureButton">Picture</string>
    <string name="app_name">Evento</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Evento</string>
    <string name="title_activity_event">Event details</string>
    <string name="title_activity_manage_activity">ManageActivity</string>
    <string name="title_login_activity">LoginActivity</string>
    <string name="text">You are in a tab</string>
    <string name="url_server">https://protected-hamlet-4797.herokuapp.com/</string>
    <string name="Slogan">This slogan will make you buy our premium features</string>
    <string name="Username">Username</string>
    <string name="only_on_my_event_str">Filter my \npersonal event(s) :</string>
    <string name="Password">Password</string>
    <string name="title_activity_creating_event">Create your own event !</string>
    <string name="server_client_id">274058441827-q1jq5v08sbp9i4gbdfppq60qq7jriejv.apps.googleusercontent.com</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_search">Looking for something ?</string>
    <string name="ownEventLabel">Your own event(s) :</string>
    <string name="otherEventLabel">Matched Event(s) :</string>
    <string name="menu_manage_event">User</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="event_title">Title</string>
    <string name="event_creator">Creator</string>
    <string name="event_start_date">Start Date</string>
    <string name="event_end_date">End Date</string>
    <string name="event_address">At</string>
    <string name="event_tags">Tags</string>
    <string name="event_description">Description</string>
    <string name="event_create_punch_line">Create your own event !</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="menu_create_event">Create an event</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_user">User</string>
    <string name="event_validate">Validate</string>
    <string name="searchFragmentTitle">Filter the events</string>
    <string name="createEvent_title">title</string>
    <string name="createEvent_participant">Participant : </string>
    <string name="createEvent_creator">creator</string>
    <string name="createEvent_startDate">startDate</string>
    <string name="createEvent_endDate">endDate</string>
    <string name="createEvent_address">address</string>
    <string name="createEvent_tags">tags</string>
    <string name="createEvent_description">description</string>
    <string name="eventFragment_join">Join the event !</string>
    <string name="event_fragment_join">Join the event !</string>
    <string name="event_fragment_remove">Leave the event !</string>
    <string name="addPictureEvent">Nothing to show</string>
    <string name="search_startDate">Start Date</string>
    <string name="search_endDate">End Date</string>
    <string name="search_buttonValidate">Search</string>
    <string name="createEvent_buttonAddEvent">Add a picture</string>
    <string name="eventFrag_createdBy">Created by : </string>
    <string name="eventFrag_from">From : </string>
    <string name="eventFrag_to">to : </string>
    <string name="eventFrag_at">at : </string>
    <string name="enter_user_to_add">Enter the name of a user you want to add </string>
    <string name="eventFrag_tags">Tags : </string>
    <string name="manage_button_add">Add</string>
    <string name="manage_button_go">Details</string>
    <string name="eventFrag_description">Descrition : </string>
    <string name="locationLabel">Search by location</string>
    <string name="searchByPlace_hint">location</string>
    <string name="searchByDateFromText">From    </string>
    <string name="startDate">start date</string>
    <string name="searchbyDateTo">To</string>
    <string name="searchByDateTo">To</string>
    <string name="searchByDateToHint">end date</string>
    <string name="searchDistance">In area of</string>
    <string name="searchArea">radius in km</string>
    <string name="menu_profile">Profile</string>
    <string name="findeventsbelow">Down below you can see the events you are hosting as well as the events you joined.</string>



    <string name="eventFragment_conversation">Conversation</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="conversation_add_comment">Add a comment</string>
    <string name="comment_message_hint">Your comment</string>
    <string name="event_fragment_delete">Delete</string>
    <string name="event_fragment_update">Update</string>
    <string name="title_activity_update_event">Updating the event</string>
    <string name="default_creating_title">Enter the title</string>
</resources>
