...
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/secondaryText"/>

    </GridLayout>

    <Button
        android:id="@+id/submitEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/pictureButton"
        android:text="@string/event_validate"
        android:textColor="@color/textInButton"
...
